fix(Home): fixed the problem of the home page being too high
- Fixed an issue where the first page was too high causing the edges to not collide with the first page.

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 
-#home {
+#root {
   background-image: url('./assets/bg-home.webp');
   height: 120vh;
   background-repeat: no-repeat;
